--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8080/",
   "dependencies": {
     "-": "^0.0.1",
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "ag-grid-react": "^32.3.0",
+    "keycloak-js": "^26.0.5",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
